--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,12 @@
             "name": "Launch Chrome against localhost",
             "url": "https://localhost:8080",
             "webRoot": "${workspaceFolder}"
+        },
+        {
+            "type": "chrome",
+            "name": "http://127.0.0.1:3000/UI/search.html",
+            "request": "launch",
+            "url": "http://127.0.0.1:3000/UI/search.html"
         }
     ]
 }
